Fix firefox menu item truncation. Bump version to 2.23.2

--- a/style/components/menu.scss
+++ b/style/components/menu.scss
@@ -63,14 +63,14 @@ $col-menu-z-index        : 1 !default;
 }
 
 .col-menu-label:after {
-    border: 4px solid;
-    border-color: rgba(#000, 0.2) transparent transparent;
-    content: "";
-    display: inline-block;
-    margin-left: 8px;
-    margin-right: -4px;
-    position: relative;
-    top: 2px;
+  border: 4px solid;
+  border-color: rgba(#000, 0.2) transparent transparent;
+  content: "";
+  display: inline-block;
+  margin-left: 8px;
+  margin-right: -4px;
+  position: relative;
+  top: 2px;
 }
 
 .col-menu-item {
@@ -81,7 +81,7 @@ $col-menu-z-index        : 1 !default;
   line-height: 16px;
   padding: $col-menu-item-padding;
   position: relative;
-  width: 100%;
+  min-width: 100%;
   transition: 0.3s all;
   text-align: left;
 
